# VKAKChat

./: .gitignore  README.md  clean_dump.sql  vkak_chat_dump.sql
client/: pubspec.yaml
client/android/app/: build.gradle.kts  google-services.json
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: animated_background.dart  main.dart
client/lib/models/: auth.dart  (+4 more)
client/web/: index.html  manifest.json  service_worker.js
database/: full_dump.sql  schema_only.sql
database/migrations/: 001_create_users_table.sql  002_create_departments_table.sql  003_add_department_relation.sql  004_insert_test_departments.sql  005_create_chats_table.sql  006_create_chat_participants.sql  007_insert_test_user.sql  008_create_favorite_contacts.sql  009_create_messages_table.sql  010_create_group_chats.sql
server/: Cargo.toml  private.pem
server/config/: default.toml
server/src/: main.rs  state.rs
server/src/handlers/: admin.rs  auth.rs  chats.rs  departments.rs  files.rs  groups.rs  health.rs  mod.rs  users.rs  webpush.rs  websocket.rs
server/src/middleware/: auth.rs
server/src/models/: department.rs  mod.rs  user.rs
server/uploads/45b23e2f-d45a-4d9f-a91b-514cc23c7d08/: 130868db-5a65-4453-aa77-3dc144fa3c41.encrypted
server/uploads/d584d70f-3c3e-4d59-aa52-d7e952e09606/: 9c0c983a-5659-4962-b7ae-fa1c5ef4e3cb.encrypted
server/uploads/d929c6e7-2f60-4050-8cb3-c0dacba6c8bf/: 30bf24ee-a2c9-4eeb-9e79-d95759a486ab.encrypted  53b8029a-1cbd-4b54-8498-afd07559f84b.encrypted  a1745c85-f48b-4486-ba2e-b82edf168637.encrypted  fa551d85-a340-4165-96a4-91c54dc39f51.encrypted
(+32 files in other folders)
